<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_rhomb"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="164dp"
        android:fontFamily="@font/delius"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="55sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/delius"
        android:text="@string/fast_and_easy"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/round_corners_white"
        android:fontFamily="@font/delius"
        android:text="@string/start"
        android:textAllCaps="true"
        android:textColor="#26c6da"
        android:textSize="35sp" />

</RelativeLayout>