<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="264dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitXY"
        android:src="@drawable/logo_rhomb" />

    <LinearLayout
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.349">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_corners_white"
            android:fontFamily="@font/delius"
            android:text="@string/sign_out"
            android:textColor="#26c6da"
            android:textSize="30sp" />

        <Button
            android:id="@+id/verify_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_corners_blue"
            android:fontFamily="@font/delius"
            android:text="@string/verify_email"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </LinearLayout>

    <Button
        android:id="@+id/skip_button"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/delius"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="#78909c"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_gravity="center"
            android:text="@string/signed_out"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="221dp"
            android:textColor="#26c6da"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="153dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:orientation="vertical"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/actor"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:fontFamily="@font/actor"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="200dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2">

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_corners_blue"
                android:fontFamily="@font/delius"
                android:text="@string/sign_in"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_corners_white"
                android:fontFamily="@font/delius"
                android:text="@string/sign_up"
                android:textColor="#26c6da"
                android:textSize="30sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>