<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:weightSum="4">

    <!-- <TextView
         android:id="@+id/status"
         style="@style/ThemeOverlay.MyTextDetail"
         android:layout_centerHorizontal="true"
         android:text="@string/signed_out" />-->

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="246dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_rhomb" />

    <LinearLayout
        android:id="@+id/layout_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="222dp"
            android:layout_height="40dp"
            android:fontFamily="@font/actor"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/field_password"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/actor"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="70dp"
        android:layout_below="@+id/layout_edit"
        android:orientation="horizontal">

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="135dp"
            android:layout_height="64dp"
            android:background="@drawable/round_corners_blue"
            android:fontFamily="@font/delius"
            android:text="@string/sign_in"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/email_create_account_button"
            android:layout_width="135dp"
            android:layout_height="64dp"
            android:background="@drawable/round_corners_white"
            android:fontFamily="@font/delius"
            android:text="@string/sign_up"
            android:textColor="#26c6da"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="135dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/verify_email_button"
            android:layout_width="134dp"
            android:layout_height="64dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_corners_blue"
            android:fontFamily="@font/delius"
            android:text="@string/verify_email"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="135dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_corners_white"
            android:fontFamily="@font/delius"
            android:text="@string/sign_out"
            android:textColor="#26c6da"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="14dp"
        android:background="#ffffff"
        android:fontFamily="@font/delius"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="#78909c"
        android:textSize="20sp" />

</RelativeLayout>
