<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_map_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            tools:context="com.example.android.parkme.Maps" />

        <Button
            android:id="@+id/nearest_parking_button"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round_corners_white"
            android:text="@string/nearest_parking"
            android:textColor="#26c6da" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/content_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/theNearestParking"
        android:layout_centerHorizontal="true"
        android:background="@drawable/corners_bottom_sheet"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/parking_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Name"
                android:textColor="#26c6da"
                android:textSize="20sp" />

            <Button
                android:id="@+id/free_spots"
                android:layout_width="148dp"
                android:layout_height="46dp"
                android:layout_below="@+id/parking_name"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="57dp"
                android:background="@drawable/round_corners_blue"
                android:padding="8dp"
                android:text="@string/free_spots"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/build_route_button"
                android:layout_width="134dp"
                android:layout_height="44dp"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/free_spots"
                android:layout_marginStart="35dp"
                android:background="@drawable/round_corners_blue"
                android:text="@string/build_route"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/parking_name"
                android:layout_below="@+id/parking_name"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/distance" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="Number" />

            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>